--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,12 @@
 .header {
-  background: #f3b95f;
+  background: #fff;
 }
 .header .container {
   margin-top: 0px;
   padding-top: 30px;
   padding-bottom: 30px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 150px auto;
   justify-content: space-between;
   align-items: center;
   gap: 40px;
@@ -17,24 +17,36 @@
     gap: 20px;
   }
 }
+#logo {
+  width: 150px;
+}
 .header a {
   margin: 0 auto;
 }
 .busca form {
   display: grid;
-  width: 260px;
+  /* width: 200px; */
 }
 .busca #s {
   background: transparent;
-  border: 1px solid #000;
-  border-radius: 4px;
+  border: 2px solid #000;
+  border-radius: 30px;
   height: 48px;
+  width: 48px;
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: 300;
-  padding: 12px 40px 12px 20px;
   font-family: 'Poppins', sans-serif;
   grid-area: 1/1;
+  opacity: 0;
+  width: 48px;
+  transition: all 1s ease-in-out;
+}
+.busca #s:hover,
+.busca #s:focus {
+  opacity: 1;
+  width: 200px;
+  padding: 12px 40px 12px 20px;
 }
 .busca #s:focus {
   outline: none;
@@ -49,10 +61,9 @@
   cursor: pointer;
 }
 .conta {
-  display: grid;
-  gap: 40px;
-  grid-template-columns: auto auto;
-  justify-self: end;
+  display: flex;
+  gap: 24px;
+  align-items: center;
 }
 .conta .minha-conta {
   background: url('../img/icons/user.svg');
@@ -107,29 +118,41 @@
 
 /* Menu categorias */
 .menu-categorias {
-  background: #f3b95f;
-  position: relative;
+  /* background: #f3b95f; */
+  /* position: relative; */
   /* border-top: 1px solid #e69211; */
+  margin-bottom: 10px;
 }
 .menu-categorias ul {
   display: flex;
   justify-content: center;
 }
 .menu-categorias ul li {
-  margin: 20px 3px;
+  margin: 4px;
+}
+.menu-categorias ul li::after {
+  content: '';
+  height: 2px;
+  width: 0px;
+  width: 0px;
+  background-color: #000;
+  display: block;
+  transition: all 0.5s ease-in-out;
+}
+.menu-categorias ul li:hover::after {
+  width: 100%;
+}
+.menu-categorias .current-menu-item::after {
+  width: 100%;
 }
 .menu-categorias a {
   color: #000;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 1rem;
   line-height: 0.75rem;
-  padding: 20px 10px;
+  padding: 12px 8px;
   font-weight: 600;
-}
-.menu-categorias a:hover,
-.menu-categorias .current-menu-item a {
-  background: #e69211;
-  transition: background 0.3s;
+  display: block;
 }
 
 @media (max-width: 800px) {
