--- a/css/base.css
+++ b/css/base.css
@@ -30,6 +30,11 @@ h2 {
   font-weight: 400;
   line-height: 2.5rem;
 }
+h3 {
+  font-size: 2.6rem;
+  font-weight: 200;
+  line-height: 3rem;
+}
 a {
   text-decoration: none;
   color: #000;
@@ -102,11 +107,39 @@ img {
   margin-bottom: 60px;
 }
 .about-home {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  /* max-height: 500px; */
+  overflow-y: hidden;
 }
-.about-home div img {
-  margin: 0 auto;
-  width: 60px;
+@media (max-width: 800px) {
+  .about-home {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .about-home ul li {
+    justify-content: center;
+  }
+  .about-home > img {
+    display: none;
+  }
+}
+.about-home > img {
+  object-fit: cover;
+}
+.about-home div {
+  margin-top: 30px;
+}
+.about-home ul li:first-child {
+  margin-top: 30px;
+}
+.about-home ul li {
+  display: flex;
+  align-items: center;
+  margin-top: 12px;
+}
+.about-home ul li img {
+  height: 28px;
+  width: 28px;
+  margin-right: 4px;
 }
